[gd_scene load_steps=5 format=3 uid="uid://bmij2ejfkgoh8"]

[ext_resource type="Script" path="res://scripts/dialoge_manager.gd" id="1_uyykl"]
[ext_resource type="Texture2D" uid="uid://bb4xwalka2fon" path="res://icon.svg" id="2_ysbxc"]
[ext_resource type="AudioStream" uid="uid://dbacumk57h7i3" path="res://audio/plop/plop2.wav" id="3_6ko8d"]
[ext_resource type="AudioStream" uid="uid://dl8nmn4yx5l0i" path="res://audio/plop/plop3.wav" id="4_3xwqr"]

[node name="DialogeManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_uyykl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Portrait" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = ExtResource("2_ysbxc")
expand_mode = 1

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="TextArea" type="Label" parent="MarginContainer/HBoxContainer/Panel/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Some text that is vitally important to the gameplay. This additional text to  test word wrapping"
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
theme_override_font_sizes/font_size = 30
text = "Continue"

[node name="Sounds" type="Node" parent="."]

[node name="Plop1" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_6ko8d")

[node name="Plop2" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_6ko8d")

[node name="Plop3" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_3xwqr")

[connection signal="pressed" from="MarginContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
